Add console program [con build]